Implement core functionality for AI Expenses Agent
- Enhanced main.py to initialize and run the Telegram bot with logging.
- Added configuration management in app/config.py using python-decouple for environment variables.
- Implemented database session management and initialization in app/database.py, including predefined categories.
- Created services for document and image processing, including file downloading and handling Telegram messages.
- Introduced models for processed documents and expense categorization.
- Updated dependencies in pyproject.toml to include pydantic for data validation.
- Added Docker initialization script for PostgreSQL configuration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "python-telegram-bot>=22.5",
     "sqlmodel>=0.0.27",
     "python-decouple>=3.8",
+    "pydantic>=2.0.0",
 ]
 
 [dependency-groups]
