Implement expense processing and AI integration
- Added ExpenseProcessor class for handling expense analysis from text, images, and PDFs.
- Introduced CurrencyService for currency conversion using ExchangeRate API.
- Created AIProvider interface and implemented OpenAI and Claude providers for expense analysis.
- Updated Telegram handlers to process expenses and respond with detailed information.
- Enhanced example.env with new environment variables for AI provider configuration and API keys.

--- a/example.env
+++ b/example.env
@@ -4,3 +4,8 @@ POSTGRES_DB=
 POSTGRES_PORT=5432
 DATABASE_URL=
 TELEGRAM_BOT_TOKEN=
+AI_PROVIDER=  
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+EXCHANGE_RATE_API_KEY=
+BASE_CURRENCY=
